Added connection to database Added Controller endpoint for importing books Added csv helpers and extensions, added factory and mappers Filled model and views with properties Added nav properties

--- a/TL.Bookstore.Infrastructure/TL.Bookstore.Infrastructure.csproj
+++ b/TL.Bookstore.Infrastructure/TL.Bookstore.Infrastructure.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Filters\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="27.2.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
+  </ItemGroup>
+
 </Project>
