--- a/TL.Bookstore.Service/TL.Bookstore.Service.csproj
+++ b/TL.Bookstore.Service/TL.Bookstore.Service.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TL.Bookstore.Contract\TL.Bookstore.Contract.csproj" />
+    <ProjectReference Include="..\TL.Bookstore.Infrastructure\TL.Bookstore.Infrastructure.csproj" />
     <ProjectReference Include="..\TL.Bookstore.Model\TL.Bookstore.Model.csproj" />
   </ItemGroup>
 
