--- a/TL.Bookstore/appsettings.Development.json
+++ b/TL.Bookstore/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "DatabaseConfiguration": {
-    "BookstoreConnectionString": ""
+    "BookstoreConnectionString": "Server=./SQLEXPRESS;Database=BookstoreDb;Trusted_Connection=True;"
   }
 }
