Added annotoations for ef code first Added initial migration Fixed connection string Added repo method for book insert + test

--- a/TL.Bookstore/appsettings.Development.json
+++ b/TL.Bookstore/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "DatabaseConfiguration": {
-    "BookstoreConnectionString": "Server=./SQLEXPRESS;Database=BookstoreDb;Trusted_Connection=True;"
+    "BookstoreConnectionString": "Data Source=localhost;Initial Catalog=BookstoreDb;Integrated Security=True;Connect Timeout=30;"
   }
 }
