Added new endpoint BorrowBookAsync Added new class and exception Validation Entity Added validation methods to model

--- a/TL.Bookstore.Model/TL.Bookstore.Model.csproj
+++ b/TL.Bookstore.Model/TL.Bookstore.Model.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TL.Bookstore.Infrastructure\TL.Bookstore.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
